--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,11 @@
         "zf2"
     ],
     "homepage": "http://framework.zend.com/",
+    "autoload": {
+        "psr-4": {
+            "Di\\": "Di/"
+        }
+    },
     "require": {
         "php": ">=5.5",
         "zendframework/zendframework": "~2.5"
